--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+upload.path="C://files//"
+
+
+aplication.ldap.domain=domain
+aplication.ldap.url=ldap://domain.corp:3268/dc=root,dc=branch
+aplication.ldap.rootDn=ou=users,ou=mnt
