--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,9 +23,14 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-upload.path="C://files//"
+upload.path=C:/files
 
 
-aplication.ldap.domain=domain
-aplication.ldap.url=ldap://domain.corp:3268/dc=root,dc=branch
-aplication.ldap.rootDn=ou=users,ou=mnt
+#application.ldap.domain=domain
+#application.ldap.url=ldap://domain.corp:3268/dc=root,dc=branch
+#application.ldap.rootDn=ou=users,ou=mnt
+
+#spring.customized.suite.auth_type = ${AUTH_TYPE:ldap}
+#spring.ldap.url =${LDAP_URLS:ldap://ldap.domain.com}
+#spring.ldap.base=${LDAP_BASE:dc=dc,dc=com}
+
